--- a/css/style.css
+++ b/css/style.css
@@ -7679,7 +7679,7 @@ html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:1
        z-index: 3;
        height: 80vh;
        margin-bottom: 0px;
-       background-image: url("https://uploads-ssl.webflow.com/60ef311e5744429849dcab68/60ef367fd227497ed26aa1ba_hero-image.jpg");
+       background-image: url("https://www.wallpapers13.com/wp-content/uploads/2017/05/Mirana-and-Dagon-Scepter-full-moon-Loading-Screen-Dota-2-heroes-Computer-HD-Wallpaper-1920x1080-1680x1050.jpg");
        background-position: 50% 0%;
        background-size: cover;
        background-attachment: fixed;
@@ -8752,7 +8752,7 @@ html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:1
    
      .hero-wrap {
        margin-bottom: 45px;
-       background-image: url("https://uploads-ssl.webflow.com/60ef311e5744429849dcab68/60ef367fd227497ed26aa1ba_hero-image.jpg");
+       background-image: url("https://www.wallpapers13.com/wp-content/uploads/2017/05/Mirana-and-Dagon-Scepter-full-moon-Loading-Screen-Dota-2-heroes-Computer-HD-Wallpaper-1920x1080-1680x1050.jpg");
        background-position: 50% 50%;
        background-size: cover;
        background-repeat: no-repeat;
